# CSV-to-Postgres-Pipeline.

./: .gitignore  README.md  main.py  pyproject.toml
src/csv_to_database_pipeline/: __init__.py
src/csv_to_database_pipeline/dependencies/: __init__.py  db_session.py  file_validation.py
src/csv_to_database_pipeline/helpers/: __init__.py  transform.py
src/csv_to_database_pipeline/modules/: __init__.py
src/csv_to_database_pipeline/modules/pipeline/: __init__.py  model.py  route.py
src/csv_to_database_pipeline/utils/: __init__.py  database.py
